--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,35 @@
-<h1> Hello! </h1>
+<html>
+<head>
+    <title>당신을 위한 서비스. 이끌림</title>
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+</head>
+<body>
+    <div id="container">
+        <div id="logo" style="height: 50%;">
+            <div align="center">
+                <img src="img/logo.png">
+            </div>
+        </div>
+
+
+        <div id="buttons" style="height: 50%; background-color: #2C3E50">
+            <div style="height: 15%">
+            </div>
+            <div style="width: 40%; height: inherit; float: right;">
+                <div align="left" style="height: auto">
+                    <img src="img/percent.png"><h3  style="float: right; height: inherit">이끌림!</h3>
+                </div>
+            </div>
+            <div style="width: 20%; height: inherit; float: right;">
+            </div>
+            <div style="width: 40%; height: inherit;">
+                <div align="right" style="height: auto">
+                    <img src="img/select.png"><h3 style="float: right; height: inherit">이행도</h3>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+</body>
+</html>
