--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,31 +1,40 @@
-<html>
+<html style="background-color: #2C3E50">
 <head>
     <title>당신을 위한 서비스. 이끌림</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
     <div id="container">
-        <div id="logo" style="height: 50%;">
+        <div id="logo" style="height: 45%;">
             <div align="center">
-                <img src="img/logo.png">
+                <img src="img/logo.png" style="max-width: 100%; height: auto;">
             </div>
         </div>
+        
+        <div style="height: 10%;">
 
+        </div>
 
-        <div id="buttons" style="height: 50%; background-color: #2C3E50">
+        <div id="buttons" style="height: 45%; background-color: #2C3E50">
             <div style="height: 15%">
             </div>
             <div style="width: 40%; height: inherit; float: right;">
-                <div align="left" style="height: auto">
-                    <img src="img/percent.png"><h3  style="float: right; height: inherit">이끌림!</h3>
+                <a href="/" onclick="alert('준비중입니다 ㅜㅜ')">
+                <div style="height: 100%; width: 97px;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
+                    <img src="img/goto_timeline.png" >
+                    <h3 style="text-align: center; color: #ffffff;">이행도</h3>
                 </div>
+                </a>
             </div>
-            <div style="width: 20%; height: inherit; float: right;">
-            </div>
-            <div style="width: 40%; height: inherit;">
-                <div align="right" style="height: auto">
-                    <img src="img/select.png"><h3 style="float: right; height: inherit">이행도</h3>
+            <div style="width: 20%; height: inherit; float: right;"></div>
+
+            <div style="width: 40%; height: inherit; float: right;">
+                <a href="/select">
+                <div style="width: 91px; float: right;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
+                    <img src="img/start_game.png">
+                    <h3 style="text-align: center; color: #ffffff">이끌림</h3>
                 </div>
+                </a>
             </div>
         </div>
 
