--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,12 @@
-<html style="background-color: #2C3E50">
+<html>
 <head>
     <title>당신을 위한 서비스. 이끌림</title>
-    <link rel="stylesheet" href="css/main.css" type="text/css">
-</head>
-<body>
-    <div id="container">
-        <div id="logo" style="height: 45%;">
+    </head>
+<body style="background-color: #2C3E50">
+    <div>
+        <div style="height: 45%;">
             <div align="center">
-                <img src="img/logo.png" style="max-width: 100%; height: auto;">
+                <img src="img/index/logo.png" style="max-width: 100%; max-height: 100%;">
             </div>
         </div>
         
@@ -19,9 +18,9 @@
             <div style="height: 15%">
             </div>
             <div style="width: 40%; height: inherit; float: right;">
-                <a href="/" onclick="alert('준비중입니다 ㅜㅜ')">
+                <a href="/timeline">
                 <div style="height: 100%; width: 97px;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
-                    <img src="img/goto_timeline.png" >
+                    <img src="img/index/goto_timeline.png" >
                     <h3 style="text-align: center; color: #ffffff;">이행도</h3>
                 </div>
                 </a>
@@ -31,7 +30,7 @@
             <div style="width: 40%; height: inherit; float: right;">
                 <a href="/select">
                 <div style="width: 91px; float: right;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
-                    <img src="img/start_game.png">
+                    <img src="img/index/start_game.png">
                     <h3 style="text-align: center; color: #ffffff">이끌림</h3>
                 </div>
                 </a>
