--- a/app/templates/select.html
+++ b/app/templates/select.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8">
-  <script src="/js/jquery.min.js"></script>
+  <script src="/js/select/jquery.min.js"></script>
   <script src="http://cdn.jsdelivr.net/interact.js/1.2.4/interact.min.js"></script>
   <title>example</title>
 
