--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -4,9 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
+
 
 	<link rel="stylesheet" href="css/timeline/reset.css"> <!-- CSS reset -->
     <link rel="stylesheet" href="css/timeline/modal.css">
@@ -19,8 +26,99 @@
 
 	<script src="js/timeline/modernizr.js"></script> <!-- Modernizr -->
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/timeline/main.js"></script>
 
 	<title>공약 이행표</title>
+
+
+    <style>
+        .progress-button{
+	display: inline-block;
+	font-size:24px;
+	color:#fff !important;
+	text-decoration: none !important;
+	padding:14px 60px;
+	line-height:1;
+	overflow: hidden;
+	position:relative;
+
+	box-shadow:0 1px 1px #ccc;
+	border-radius:2px;
+
+	background-color: #51b7e6;
+	background-image:-webkit-linear-gradient(top, #51b7e6, #4dafdd);
+	background-image:-moz-linear-gradient(top, #51b7e6, #4dafdd);
+	background-image:linear-gradient(top, #51b7e6, #4dafdd);
+}
+
+/* Hide the original text of the button. Then the loading or finished
+   text will be shown in the :after element above it. */
+
+.progress-button.in-progress,
+.progress-button.finished{
+	color:transparent !important;
+}
+
+.progress-button.in-progress:after,
+.progress-button.finished:after{
+	position: absolute;
+	z-index: 2;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	top: 0;
+	padding-top: inherit;
+	color: #fff !important;
+	left: 0;
+}
+
+/* If the .in-progress class is set on the button, show the
+   contents of the data-loading attribute on the butotn */
+
+.progress-button.in-progress:after{
+	content:attr(data-loading);
+}
+
+/* The same goes for the .finished class */
+
+.progress-button.finished:after{
+	content:attr(data-finished);
+}
+
+/* The colorful bar that grows depending on the progress */
+
+.progress-button .tz-bar{
+	background-color:#e667c0;
+	height:3px;
+	bottom:0;
+	left:0;
+	width:0;
+	position:absolute;
+	z-index:1;
+
+	border-radius:0 0 2px 2px;
+
+	-webkit-transition: width 0.5s, height 0.5s;
+	-moz-transition: width 0.5s, height 0.5s;
+	transition: width 0.5s, height 0.5s;
+}
+
+/* The bar can be either horizontal, or vertical */
+
+.progress-button .tz-bar.background-horizontal{
+	height:100%;
+	border-radius:2px;
+}
+
+.progress-button .tz-bar.background-vertical{
+	height:0;
+	top:0;
+	width:100%;
+	border-radius:2px;
+}
+    </style>
+
 
 
 </head>
@@ -74,7 +172,14 @@
                         {% endif %}
 
 
-                        <progress value="{{ data['promise_percent'] }}" max="100"></progress>
+                        <!--<progress value="{{ data['promise_percent'] }}" max="100"></progress> -->
+                    <div class="progress">
+      <div class="determinate" style="width: {{ data['promise_percent'] }}%"></div>
+  </div>
+
+                        <!-- <a id="controlButton" href="#" class="progress-button">Start</a> -->
+
+
                         {{ data['promise_percent'] }}%
                         <p>{{ data['promise_info'] }}</p>
 
@@ -83,20 +188,338 @@
 
                         {% endif %}
 
-                        <a href="javascript:openPopup()" class="cd-read-more" style="float: right;">Read more</a>
+                        <a href="#{{ data['promise_title'] }}" class="cd-read-more modal-trigger" style="float: right;">Read more</a>
 
                         <span class="cd-date">{{ data['promise_date'] }}</span>
                     </div>
                 </div>
 
+                <div id="{{ data['promise_title'] }}" class="modal modal-fixed-footer">
+                    <div class="modal-content">
+                        <div class="slider">
+                            <ul class="slides">
+                                <li>
+                                <img src="http://lorempixel.com/580/250/nature/2"> <!-- random image -->
+                                    <div class="caption left-align">
+                                        <h3>{{ data['promise_title'] }}</h3>
+                                        <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="http://lorempixel.com/580/250/nature/2"> <!-- random image -->
+                                    <div class="caption left-align">
+                                        <h3>{{ data['promise_title'] }}</h3>
+                                        <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="http://lorempixel.com/580/250/nature/3"> <!-- random image -->
+                                    <div class="caption right-align">
+                                        <h3>{{ data['promise_title'] }}</h3>
+                                        <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="http://lorempixel.com/580/250/nature/4"> <!-- random image -->
+                                    <div class="caption center-align">
+                                        <h3>{{ data['promise_title'] }}</h3>
+                                        <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div> <!-- end of modal-content -->
+                    <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+                    </div> <!-- end of modal-footer -->
+                </div> <!-- fixed by ner0, modal-fixed-footer  -->
+
             {%  endfor  %}
         {% endfor %}
 
 
-
-
 	</section> <!-- cd-timeline -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="js/timeline/main.js"></script> <!-- Resource jQuery -->
+    <script>
+     $(document).ready(function() {
+         jQuery.noConflict();
+         $(".modal-trigger").leanModal();
+         //$("#title_3f").openModal();
+         $('.slider').slider({full_width: true});
+     });
+
+
+     $(document).ready(function(){
+
+	// Convert all the links with the progress-button class to
+	// actual buttons with progress meters.
+	// You need to call this function once the page is loaded.
+	// If you add buttons later, you will need to call the function only for them.
+
+	$('.progress-button').progressInitialize();
+
+	// Listen for clicks on the first three buttons, and start
+	// the progress animations
+
+	$('#submitButton').click(function(e){
+		e.preventDefault();
+
+		// This function will show a progress meter for
+		// the specified amount of time
+
+		$(this).progressTimed(2);
+	});
+
+	$('#actionButton').click(function(e){
+		e.preventDefault();
+		$(this).progressTimed(2);
+	});
+
+	$('#generateButton').one('click', function(e){
+		e.preventDefault();
+
+		// It can take a callback
+
+		var button = $(this);
+		button.progressTimed(3, function(){
+
+			// In this callback, you can set the href attribute of the button
+			// to the URL of the generated file. For the demo, we will only
+			// set up a new event listener that alerts a message.
+
+			button.click(function(){
+				alert('Showing how a callback works!');
+			});
+		});
+	});
+
+	// Custom progress handling
+
+	var controlButton = $('#controlButton');
+
+	controlButton.click(function(e){
+		e.preventDefault();
+
+		// You can optionally call the progressStart function.
+		// It will simulate activity every 2 seconds if the
+		// progress meter has not been incremented.
+
+		controlButton.progressStart();
+	});
+
+	$('.command.increment').click(function(){
+
+		// Increment the progress bar with 10%. Pass a number
+		// as an argument to increment with a different amount.
+
+		controlButton.progressIncrement();
+	});
+
+	$('.command.set-to-1').click(function(){
+
+		// Set the progress meter to the specified percentage
+
+		controlButton.progressSet(1);
+	});
+
+	$('.command.set-to-50').click(function(){
+		controlButton.progressSet(50);
+	});
+
+	$('.command.finish').click(function(){
+
+		// Set the progress meter to 100% and show the done text.
+		controlButton.progressFinish();
+	});
+
+});
+
+// The progress meter functionality is available as a series of plugins.
+// You can put this code in a separate file if you wish to keep things tidy.
+
+(function($){
+
+	// Creating a number of jQuery plugins that you can use to
+	// initialize and control the progress meters.
+
+	$.fn.progressInitialize = function(){
+
+		// This function creates the necessary markup for the progress meter
+		// and sets up a few event listeners.
+
+		// Loop through all the buttons:
+
+		return this.each(function(){
+
+			var button = $(this),
+				progress = 0;
+
+			// Extract the data attributes into the options object.
+			// If they are missing, they will receive default values.
+
+			var options = $.extend({
+				type:'background-horizontal',
+				loading: 'Loading..',
+				finished: 'Done!'
+			}, button.data());
+
+			// Add the data attributes if they are missing from the element.
+			// They are used by our CSS code to show the messages
+			button.attr({'data-loading': options.loading, 'data-finished': options.finished});
+
+			// Add the needed markup for the progress bar to the button
+			var bar = $('<span class="tz-bar ' + options.type + '">').appendTo(button);
+
+			// The progress event tells the button to update the progress bar
+			button.on('progress', function(e, val, absolute, finish){
+
+				if(!button.hasClass('in-progress')){
+
+					// This is the first progress event for the button (or the
+					// first after it has finished in a previous run). Re-initialize
+					// the progress and remove some classes that may be left.
+
+					bar.show();
+					progress = 0;
+					button.removeClass('finished').addClass('in-progress')
+				}
+
+				// val, absolute and finish are event data passed by the progressIncrement
+				// and progressSet methods that you can see near the end of this file.
+
+				if(absolute){
+					progress = val;
+				}
+				else{
+					progress += val;
+				}
+
+				if(progress >= 100){
+					progress = 100;
+				}
+
+				if(finish){
+
+					button.removeClass('in-progress').addClass('finished');
+
+					bar.delay(500).fadeOut(function(){
+
+						// Trigger the custom progress-finish event
+						button.trigger('progress-finish');
+						setProgress(0);
+					});
+
+				}
+
+				setProgress(progress);
+			});
+
+			function setProgress(percentage){
+				bar.filter('.background-horizontal,.background-bar').width(percentage+'%');
+				bar.filter('.background-vertical').height(percentage+'%');
+			}
+
+		});
+
+	};
+
+	// progressStart simulates activity on the progress meter. Call it first,
+	// if the progress is going to take a long time to finish.
+
+	$.fn.progressStart = function(){
+
+		var button = this.first(),
+			last_progress = new Date().getTime();
+
+		if(button.hasClass('in-progress')){
+			// Don't start it a second time!
+			return this;
+		}
+
+		button.on('progress', function(){
+			last_progress = new Date().getTime();
+		});
+
+		// Every half a second check whether the progress
+		// has been incremented in the last two seconds
+
+		var interval = window.setInterval(function(){
+
+			if( new Date().getTime() > 2000+last_progress){
+
+				// There has been no activity for two seconds. Increment the progress
+				// bar a little bit to show that something is happening
+
+				button.progressIncrement(5);
+			}
+
+		}, 500);
+
+		button.on('progress-finish',function(){
+			window.clearInterval(interval);
+		});
+
+		return button.progressIncrement(10);
+	};
+
+	$.fn.progressFinish = function(){
+		return this.first().progressSet(100);
+	};
+
+	$.fn.progressIncrement = function(val){
+
+		val = val || 10;
+
+		var button = this.first();
+
+		button.trigger('progress',[val])
+
+		return this;
+	};
+
+	$.fn.progressSet = function(val){
+		val = val || 10;
+
+		var finish = false;
+		if(val >= 100){
+			finish = true;
+		}
+
+		return this.first().trigger('progress',[val, true, finish]);
+	};
+
+	// This function creates a progress meter that
+	// finishes in a specified amount of time.
+
+	$.fn.progressTimed = function(seconds, cb){
+
+		var button = this.first(),
+			bar = button.find('.tz-bar');
+
+		if(button.is('.in-progress')){
+			return this;
+		}
+
+		// Set a transition declaration for the duration of the meter.
+		// CSS will do the job of animating the progress bar for us.
+
+		bar.css('transition', seconds+'s linear');
+		button.progressSet(99);
+
+		window.setTimeout(function(){
+			bar.css('transition','');
+			button.progressFinish();
+
+			if($.isFunction(cb)){
+				cb();
+			}
+
+		}, seconds*1000);
+	};
+
+})(jQuery);
+
+
+
+    </script>
 </body>
 </html>
